checking in various recent changes made.